CHANGES-1.1.txt
---------------

CHANGES IN CUPS V1.1.18

	- The cupsaddsmb utility specified the wrong number of
	  arguments to the adddriver command when adding the
	  Win9x PostScript drivers.
	- The web interface did not always report the correct
	  error message.
	- The scheduler did not clear the POSIX signal action
	  structure when waiting for the child to send it a
	  SIGUSR1 signal; this could cause the signal handler
	  not to be called properly, preventing the parent
	  process from returning.


CHANGES IN CUPS V1.1.17

	- The "manual_copies" option did not work when the LPD
	  backend had to retry a print job.
	- The image filters did not convert GIF images properly.
	- The RunAsUser option was incompatible with the new
	  daemon-mode code in 1.1.16.
	- Fixed a problem with the Set-Job-Attributes and
	  PostScript job ticket code in the scheduler - the
	  "last" attribute pointer was never updated, which
	  could cause the scheduler to crash when applying job
	  ticket data.
	- Fixed a problem in the scheduler that caused it to
	  continue processing HTTP requests on a connection
	  after it was shutdown.
	- The scheduler now allows accounts authenticated via
	  PAM to not have a corresponding UNIX account, but
	  group membership still requires the account name to be
	  listed in the UNIX group file(s)...
	- The scheduler used a fixed-size (16k) buffer for
	  encoding job options for filters; it now dynamically
	  allocates and expands the buffer as needed depending
	  on the options that are sent in a job.
	- The pdftops filter didn't support all of the MacOS
	  characters for MacRoman encoded fonts.
	- The cupsEncodeOptions() and cupsParseOptions()
	  functions now conform to the grammer defined by the
	  current draft of the PAPI specification.  The main
	  difference is that option=yes and option=no are no
	  longer treated as boolean options.
	- The IPP backend didn't honor the encryption settings
	  in /etc/cups/client.conf.